# bazel-toolchains

./: BUILD.bazel  README.md  WORKSPACE
doddy/: go.mod  go.sum
doddy/bazel/: BUILD.bazel  dependencies.bzl
doddy/bazel/i18n/: i18n.bzl
doddy/bazel/private/: repositories.bzl
doddy/bazel/toolchains/: py_toolchain.bzl
doddy/bazel/visibility/: BUILD.bazel
